# fashion_store

./: .gitignore  README.md  about.html  catalog.html  index.html  lookbook.html  ВЕБ_ЛР2_БерезкинСА_ИДБ-23-08.docx
backend/: main.py  requirements.txt
css/: styles.css
frontend-yew/: Cargo.toml  Trunk.toml  index.html
frontend-yew/src/: app.rs  calculator.rs  main.rs  models.rs
frontend-yew/src/components/: layout.rs  nav.rs
frontend-yew/src/pages/: about.rs  auth.rs  calculator.rs  catalog.rs  home.rs  lookbook.rs  mod.rs  outfits.rs
frontend-yew/src/services/: api.rs  storage.rs
frontend-yew/static/: styles.css
