[package]
name = "noir-atelier-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = "0.6"
gloo-storage = "0.4"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlInputElement", "HtmlTextAreaElement", "Window"] }
